# haiku_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/haiku_cli/: cli.py  input.py  models.py  output.py  parser.py  scoring.py  validate.py
src/haiku_cli/ai/: __init__.py  claude.py  json_response.py  lmstudio.py  ollama.py  prompts.py  runner.py  suggestions.py
src/haiku_cli/syllables/: __init__.py  compounds.py  german.py
tests/: test_cli.py  test_german_syllables.py  test_json_response.py  test_lmstudio.py  test_ollama.py  test_parser.py  test_prompts.py  test_runner.py  test_scoring.py  test_suggestions.py
