[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haiku-cli"
version = "0.1.0"
description = "German-only Haiku CLI with 5-7-5 validation and optional AI checks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "Cursor Agent" },
]
dependencies = [
  "click",
  "pyphen",
  "rich",
]

[project.optional-dependencies]
ai = [
  "anthropic",
  "ollama",
]
compounds = [
  "compound-split; python_version < '3.12'",
  "charsplit-fst; python_version >= '3.12'",
]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
haiku = "haiku_cli.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
